# OpenGL-Learning

1 - HelloWindow/: CMakeLists.txt
1 - HelloWindow/src/: glad.c  main.cpp
10 - Materials/shaders/: 1.colors.fs
10 - Materials/src/: main.cpp
11 - Lighting Maps/: CMakeLists.txt
11 - Lighting Maps/shaders/: 1.colors.fs  1.colors.vs
11 - Lighting Maps/src/: main.cpp
12 - Light Casters/: CMakeLists.txt
12 - Light Casters/shaders/: 1.colors.fs
12 - Light Casters/src/: main.cpp
13 - Multiple Lights/: CMakeLists.txt
13 - Multiple Lights/src/: main.cpp
14 - Assimp/include/: filesystem.hpp  mesh.hpp
14 - Assimp/shaders/: 1.model_loading.fs  1.model_loading.vs  fragmentshader.glsl
14 - Assimp/src/: main.cpp  model.cpp
15 - Stencil Testing/: CMakeLists.txt
15 - Stencil Testing/include/: model.hpp
15 - Stencil Testing/src/: main.cpp
16 - Blending/: CMakeLists.txt
16 - Blending/shaders/: 1.colors.fs  1.model_loading.vs  3.1.blending.fs  shaderSingleColor.vs
16 - Blending/src/: main.cpp
17 - Face Culling/: CMakeLists.txt
17 - Face Culling/include/: shader.hpp
17 - Face Culling/src/: main.cpp  model.cpp
2 - Hello Triangle/: CMakeLists.txt
2 - Hello Triangle/shaders/: fragmentshader.glsl  vertexshader.glsl
2 - Hello Triangle/src/: main.cpp
3 - Shaders/: CMakeLists.txt
3 - Shaders/shaders/: fragmentshader.glsl  vertexshader.glsl
3 - Shaders/src/: main.cpp
4 - Texture/: CMakeLists.txt
4 - Texture/src/: main.cpp  shader.chh
5 - Transformations/: CMakeLists.txt
5 - Transformations/shaders/: vertexshader.glsl
5 - Transformations/src/: main.cpp
6 - Coordinate Systems/: CMakeLists.txt
6 - Coordinate Systems/include/: shader.chh
6 - Coordinate Systems/shaders/: fragmentshader.glsl  vertexshader.glsl
6 - Coordinate Systems/src/: main.cpp  shader.cpp
7 - Camera/: CMakeLists.txt
7 - Camera/include/: shader.hpp
8 - Colors/: CMakeLists.txt
9 - Basic Lighting/: CMakeLists.txt
(+11 files in other folders)
